--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <body>
     <div class="grid-con">
       <section class="col-span-full m-col-span-6">
-        <h2>Movies</h2>
+        <h2>CHARACTERS</h2>
         <div id="character-box">
 
         </div>
       </section>
 
       <div class="col-span-full m-col-span-6">
-        <h2>Review</h2>
+        <h2>MOVIES</h2>
         <section id="review-con">
 
         </section>
