--- a/index.html
+++ b/index.html
@@ -11,7 +11,33 @@
     <link href="css/main.css" rel="stylesheet">
     <script defer src="js/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="grid-con">
+
+      <section class="col-span-full m-col-span-6">
+
+        <h3>Movies</h3>
+        <div id="movie-box"></div>
+
+      </section>
+
+      <div class="col-span-full m-col-span-6">
+        <h3>Review</h3>
+
+        <section id="review-con">
+          </section>
+
+        <template id="review-template">
+          <!-- template will go here -->
+
+          <h3 class="review-heading"></h3>
+          <p class="review-author"></p>
+          <p class="review-description"></p>
+        </template>
+
+      </div>
+
+    </div>
     
   </body>
 </html>
