--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title> Title</title>
+    <title>Movie API</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,30 +13,24 @@
   </head>
   <body>
     <div class="grid-con">
-
       <section class="col-span-full m-col-span-6">
+        <h2>CHARACTERS</h2>
+        <div id="character-box">
 
-        <h3>Movies</h3>
-        <div id="movie-box"></div>
-
+        </div>
       </section>
 
       <div class="col-span-full m-col-span-6">
-        <h3>Review</h3>
-
+        <h2>MOVIES</h2>
         <section id="review-con">
-          </section>
 
+        </section>
         <template id="review-template">
-          <!-- template will go here -->
-
           <h3 class="review-heading"></h3>
           <p class="review-author"></p>
           <p class="review-description"></p>
         </template>
-
       </div>
-
     </div>
     
   </body>
