--- a/index.html
+++ b/index.html
@@ -2,29 +2,35 @@
 <html lang="en">
   <head>
     <title>Movie API</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
-    <link href="css/grid.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap"
+      rel="stylesheet"
+    />
+    <link href="css/grid.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
     <script defer src="js/main.js"></script>
   </head>
   <body>
+    <header>
+      <h2>Starwars</h2>
+    </header>
     <div class="grid-con">
       <section class="col-span-full m-col-span-6">
-        <h2>CHARACTERS</h2>
-        <div id="character-box">
-
+        <div class="center">
+          <h2>Characters</h2>
+          <div id="character-box"></div>
         </div>
       </section>
 
       <div class="col-span-full m-col-span-6">
-        <h2>MOVIES</h2>
-        <section id="review-con">
-
-        </section>
+        <div class="center">
+          <h2>Movies</h2>
+          <section id="review-con"></section>
+        </div>
         <template id="review-template">
           <h3 class="review-heading"></h3>
           <p class="review-author"></p>
@@ -32,6 +38,5 @@
         </template>
       </div>
     </div>
-    
   </body>
 </html>
