--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
         </template>
       </div>
     </div>
+    <footer>
+      <div class="center">
+        <p>starwars &copy; 2024</p>
+      </div>
+    </footer>
   </body>
 </html>
